--- a/assets/css/productview.css
+++ b/assets/css/productview.css
@@ -6,76 +6,17 @@
 
 body {
     font-family: 'Merienda', cursive;
-   
 }
 
-/* nav bar  */
-.menu-bar {
-    height: 120px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #6C3DD9;
-}
 
-.menu-bar img {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    margin-left: 100px;
-}
 
-.menu-bar ul {
-    list-style: none;
-    display: flex;
-    margin-top: 0px;
-}
-
-.menu-bar ul li {
-    position: relative;
-    margin-right: 30px;
-    list-style: none;
-    font-size: 18px;
-    padding-top: 6px;
-    font-weight: 400;
-}
-
-.menu-bar ul li::after {
-    content: '';
-    display: block;
-    background-color: white;
-    height: 2px;
-    width: 0%;
-    margin: auto;
-    transition: 0.5s;
-}
-
-.menu-bar ul li:hover::after {
-    width: 100%;
-}
-
-.menu-bar ul li a {
-    font-size: 20px;
-    text-decoration: none;
-    color: white;
-}
-
-.sec2 {
-    display: flex;
-    justify-content: space-around;
-    animation-name: slide;
-    animation-duration: 4s;
-}
-@keyframes slide{
-    0%{opacity: 0;}
-    100%{ opacity: 1;}
-    }
 /* button  */
 .join {
     cursor: pointer;
     background-color: #6C3DD9;
     color: white;
     font-weight: 500;
-    position: relative;
+   
     padding: 20px 85px;
     border: none;
     margin-top: 40px;
@@ -98,124 +39,35 @@ h3 {
     color: #6C3DD9;
     animation-name: slide;
     animation-duration: 2s;
+    border: 2px solid red;
+    
 }
 span{
     text-transform: uppercase;
-}
-#img3{
-    /* margin-bottom: 25px; */
-}
-.triimage img {
-    border-radius: 20px;
-    margin-top: 40px;
-}
-
-.abttri p,
-li {
-    font-size: 20px;
-    line-height: 25px;
-    list-style: none;
-}
-
-.products {
-    background-color: #d4c1ff;
-    height: 550px;
-    width: 500px;
     text-align: center;
-    border-radius: 20px;
-    margin: 45px;
-    animation-name: new;
-    animation-duration: 4s;
+}
+#img1{
+    /* margin-bottom: 25px; */
+    border: 2px solid red;
 }
 
-.products img {
-    width: 300px;
-    height: 300px;
 
-    margin-top: 50px;
-    border-radius: 10px;
-}
-@keyframes new{
-    0%{transform: translateX(1500px);opacity: 0;}
-    100%{transform: translateX(0px); opacity: 1;}
-    }
-    
-.products img:hover{
-    box-shadow: 5px 10px 18px #888888;
-}
-
-.products h1 {
-    margin-top: 20px;
-}
-
-.products p {
-    margin-top: 20px;
-}
-
-.sec3 {
+.sec2{
     display: flex;
-    overflow-x: scroll;
-    overflow-y: hidden;
+    flex-wrap: wrap;
 }
 
-.sec3::-webkit-scrollbar {
-    display: none;
-}
- /* footer  */
-#footer {
-    position: relative;
+
+.prod_desc{
+    border: 2px solid red;
+    width: 75%;
+    margin-left: 100px;
+    height: 75%;
+    line-break:loose;
+    line-height: 20px;
 }
 
-footer {
-    background-color: #6C3DD9;
-    padding-top: 50px;
-}
-
-.foot1 {
-    display: flex;
-    justify-content: space-between;
-    margin: 20px 100px 0px 160px;
-    color: white;
-}
-
-.fb img {
-    padding-left: 15px;
-}
-
-.foot2 {
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 100px 0px 160px;
-    color: white;
-}
-
-.foot2p p {
-    font-weight: 500;
-    padding-top: 20px;
-}
-
-.foot22p {
-    display: flex;
-}
-
-.foot22p p {
-    padding-left: 60px;
-    padding-top: 20px;
-    font-weight: 500;
-    margin-bottom: 50px;
-}
-
-.foot3 {
-    display: flex;
-    justify-content: space-between;
-    color: white;
-    margin: 30px 100px 0px 160px;
-}
-
-.add p {
-    padding-left: 30px;
-}
-
-.mail p {
-    padding-left: 30px;
+ 
+.abttri p{
+    text-align: center;
 }
