--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -342,3 +342,20 @@ footer{
   input:checked:before{
     left: 50px;
   }
+
+
+
+  /* search  */
+  .search-container {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 10px;
+  }
+  
+  #search-bar {
+    padding: 10px;
+    width: 50%;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    margin-right: 10px;
+  }
