--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -305,7 +305,7 @@ footer{
     /* justify-content: space-between; */
     margin-left: 400px;
   }
-  .checkbox label{
+  /* .checkbox label{
   
    font-size: 30px;
     color: whitesmoke;
@@ -322,8 +322,8 @@ footer{
     box-shadow: inset 0 0 5px rgba(230, 188, 188, 0.2);
     cursor: pointer;
     transition: 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  .checkbox input:checked{
+  } */
+  /* .checkbox input:checked{
     background: #664AFF;
  
   }
@@ -341,7 +341,7 @@ footer{
   }
   input:checked:before{
     left: 50px;
-  }
+  } */
 
 
 
@@ -361,7 +361,7 @@ footer{
   }
   .translate{
     position: absolute;
-    top: 0px;
-    right: 100px;
+    top: 90px;
+    right: 10px;
     
  }
